# otter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  codecov.yml  paper.bib  paper.md  pyproject.toml  reference_map_local.json  tutorials
auto/: paper.el
data/: ARP-299-B-AT1.json  ASASSN-14li.json  ASASSN-15oi.json  AT2018hyz.json  AT2019azh.json  AT2019dsg.json  AT2020opy.json  AT2020vwl.json  AT2022cmc.json  CNSS-J0019+00.json  IGR-J12580+0134.json  Sw-J1112-82.json  Sw-J1644+57.json  Sw-J16644+57.json  Sw-J2058+05.json  XMMSL1-J0740-85.json  fluxes_litTDEs_.csv  fluxes_litTDEs_more.csv
db/: setup.sh
dev/: Clean-Radio-JSON-Files.ipynb  api-test.ipynb  dev_upload.ipynb  play-with-james-data.ipynb  reformat_tde_data.ipynb
docs/: conf.py  contributing.rst  examples.rst  index.rst  introduction.rst  introduction_installation.rst  rest-api.rst  schema.rst  source.rst
paper/: extract.lua  paper.bib  paper.md
scripts/: #process-data.sh#  base_radio_data_to_otter.py  csv_photometry_to_otter.py  curated_optical_tde_catalog_to_otter.py  drop_unconfirmed_events.py  fix_tde_dot_space_file_bug.py  gen_class_flags.py  gen_summary_table.py  generate_local_reference_map.py  goldtooth_2023_to_otter.py  guolo23_missing_models.csv  guolo24_to_otter.py  hajela24_to_otter.py  masterson24_to_otter.py  process-data.sh  radio_photometry_to_otter.py  reference_map_local.json  ridley23_to_otter.py  tde_dot_space_to_otter.py  tns_to_otter.py  validate.py  zipfile_to_otter.py
tests/: conftest.py  gaia16aax-meta.csv  (+6 more)
(+431 files in other folders)
